--- a/devshellAndShellFor/package1/package1.cabal
+++ b/devshellAndShellFor/package1/package1.cabal
@@ -31,6 +31,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , zlib
   default-language: Haskell2010
 
 executable package1
@@ -45,4 +46,5 @@ executable package1
   build-depends:
       base >=4.7 && <5
     , package1
+    , zlib
   default-language: Haskell2010
