--- a/purifixProject/spago.yaml
+++ b/purifixProject/spago.yaml
@@ -13,7 +13,7 @@ package:
     - now
     - prelude
     - tailrec
-  name: my-project
+  name: purifix-project
   publish:
     version: 0.1.0
 workspace:
