--- a/.github/workflows/what-is-truthy.yaml
+++ b/.github/workflows/what-is-truthy.yaml
@@ -1,3 +1,5 @@
+name: What is truthy?
+
 on:
   workflow_dispatch:
 
@@ -25,5 +27,5 @@ jobs:
         if: matrix.runme
         run: echo "${{ matrix.runme }} evaluates true"
       - name: false-path
-        if: ! matrix.runme
+        if: ${{ ! matrix.runme }}
         run: echo "${{ matrix.runme }} evaluates false"
